Bug 1376189 - Make VCFullNameProp a field so VCQuotedPrintableProp can be stored with it. r=aceman